web/static/css/_ncd.scss
// NCD class styles



// ---------materialize reset classes ---------------

.tabs {
  background-color: transparent;
  .tab {

    a {
      @extend .grey-text;
      font-size: .9rem;
      padding: 0 5px;
      &:hover {
        @extend .white-text;
        background-color: transparent;
      }
    }
    &.active {
      background-color: transparent;
      a {
        @extend .white-text;
      }
    }

  }
  .indicator {
    @extend .green;
    height: 6px;
  }
}


// --------- NCD classes ---------------


html, body {
  @extend .grey, .lighten-3;
  > main {
    > div {
    }
  }
}


main:not(.main-welcome) {
  @include flexbox();
  flex: 1 0 auto;
  > div {
    flex: 1;
    padding-top: 90px;
    padding-bottom: 80px;
  }
}

.wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  min-width: 320px;
  & > * > * {
    padding-left: 10%;
    padding-right: 10%;
  }
}

header {
  @extend .grey, .darken-3;

  .logo {
    display: inline-block;
    vertical-align: top;
    text-align: center;
    border-radius: 50%;
    border: 1px solid rgba(255, 255, 255, 0.102);
    width: 60px;
    height: 60px;
    padding-top: 3px;
    margin-right: 25px;
    margin-left: -85px;
    + a.breadcrumb:before {
      display: none;
    }
  }
}

#TopNav {
  border-bottom: 1px solid color("shades", "black");

  .col > ul {
    &:not(.right) {
      margin-left: -15px;
    }
    a {
      @extend .grey-text;
      i.right {
        font-size: 1.6rem;
        margin-left: 5px;
      }
    }
    .dropdown-content > li >  a {
      @extend .black-text;
    }
  }
}

#MainNav {
  height: auto;
  padding-top: 1rem;
  padding-bottom: 1rem;

  .col {
    height: 66px;
  }

  a.page-title {
    font-size: 20px;
    max-width: 95%;
    display: inline-block;
    i {
      @extend .grey-text, .lighten-2;
      font-size: 24px;
      display: inline-block;
      vertical-align: top;
      margin-left: 15px;
    }
  }
  input#questionnaire_name {
    margin: 0;
  }
}

#BottomNav {
  height: auto;
  line-height: 1;
  .row {
    margin-bottom: 0;
  }
}


footer {
  position: relative;
  margin-top: -40px;
}



// ------- Card w/Table ----------

.card {
  border-radius: 3px;

  .card-table-title {
    @extend .black-text;
    font-size: 20px;
    font-weight: 400;
    padding: 25px;
  }


  .card-table {
    padding: 0;
    > table {
      @extend .bordered;

      th {
        @extend .grey-text, .lighten-2;
        padding: 25px;
         a {
          color: inherit;
        }
      }

      td {
        @extend .black-text;
        padding: 25px;
        a {
          color: inherit;
        }
      }
    }
    table.responses-table {
      input[type=text] {
        margin-bottom: 0;
        height: auto;
      }
    }
  }
}

// ------- Survey Card  ----------

.survey-card .card {
  @extend .black-text;
  padding: 0px;
  .card-chart {
    margin: 30px 0 20px;
  }
  .card-content {
    padding: 30px 0;
    > div {
      padding-left: 30px;
      padding-right: 30px;
    }
    .card-status {
      border-top: 1px solid color("grey","lighten-3");
      padding-top: 20px;
      padding-bottom: 20px;
      p {
        margin-top: 10px;
      }
      i {
        vertical-align: top;
        margin-right: 10px;
      }
    }
  }
}


// ------- Left Wizard ----------


.collection.wizard {
  @extend .z-depth-1;
  border-radius: 5px;
  .collection-header {
    @extend .grey, .lighten-3;
    position: relative;
    .progress {
      @extend .grey, .lighten-2;
      position: absolute;
      bottom: 0;
      left: 0;
      margin: 0;
      width: 100%;
      height: 6px;
      .determinate {
       @extend .green, .accent-4;
      }
    }
  }
  .collection-item {
    padding: 0 !important;
    border: none;
    opacity: .5;
    > a {
      @extend .truncate;
      @extend .black-text;
      width: 100%;
      position: relative;
      padding: 20px 35px 20px 20px;
      > i {
        vertical-align: middle;
        margin-right: 15px;
      }
      .arrowright {
        position: absolute;
        right: 10px;
      }
    }
    &.optional {
      .arrowright:after {
        content: 'optional';
        font-size: 80%;
        text-transform: uppercase;
        position: absolute;
        margin-left: -90px;
      }
    }
    a.active {
      @extend .transparent;
      @extend .black-text;
      font-weight: 700;
      opacity: 1;
    }
    &.completed {
      opacity: 1;
      a, a.active {
        @extend .green-text;
      }
    }
  }
}

.sidebar.pinned {
  width: 24.9vw;
}

// ------- Forms --------------

.dropfile {
  @include  transition(border-color ease-in-out .2s);
  @extend .grey-text;
  font-size: 18px;
  width: 100%;
  height: 350px;
  border: 2px dashed color("grey", "lighten-3");
  position: relative;
  cursor: pointer;
  .drop-icon {
    @include  transition(color ease-in-out .2s);
    color: inherit;
    position: absolute;
    width: 20%;
    top: calc(50% - 70px);
    margin: 0 40%;
    &:before {
      content: 'insert_drive_file';
      font-family: 'Material Icons';
      font-size: 50px;
      position: absolute;
      top: 0;
      width: 100%;
      text-align: center;
    }
  }
  .drop-text {
    @include  transition(color ease-in-out .2s);
    color: inherit;
    position: absolute;
    width: 70%;
    top: 50%;
    margin: 0 15%;
    &:before {
      content: 'Drop your CSV file here, or click to browse';
      text-align: center;
      position: absolute;
      width: 100%;
      text-align: center;
    }
  }
  &.active {
    @extend .blue-text, .lighten-1;
    border-color: color("blue", "lighten-1");
    .drop-text:before {
      content: 'Drop your file to start uploading';
    }
  }
  &.rejectedfile {
    @extend .red-text;
    border-color: color("red", "lighten-1");
    .drop-icon:before {
      content: 'block';
    }
    .drop-text:before {
      content: 'Invalid file type';
    }
  }
}

.select-wrapper {
  .caret {
    @extend .transparent-text;
    font-family: Arial, Helvetica, 'san-serif';
    position: relative;
    width: 25px;
    &:after {
      content: 'keyboard_arrow_down';
      font-family: 'Material Icons';
      @extend .black-text;
      font-size: 20px;
      line-height: 1;
      position: absolute;
      top: 0;
      right: 0;
    }
  }
  .dropdown-content {
    li {
      span {
        @extend .black-text;
      }
    }
  }
}

.collection-item.header {
  padding: 20px;
  .material-icons.prefix {
    @extend .grey-text, .lighten-2;
    font-size: 1.6rem;
    top: 1.8rem;
  }
  input[type=text].editable-field {
    font-size: 20px;
    border-bottom: none;
    width: 85%;
    margin-left: 2.4rem;
    margin-bottom: 0;
  }
  .collapse {
    @extend .grey-text, .lighten-2;
    margin-top: 1rem;
  }
}

.character-counter {
  @extend .grey-text, .lighten-2;
}

.closed-step {
  a {
    @extend .black-text;
    @extend .clearfix;
    font-size: 20px;
    display: block;
    padding: 10px 0;
    span {
      width: 85%;
      float: left;
    }
  }
}


// ------- helper classes -----------

.mtop {
  margin-top: -8rem;
}

.empty_page {
  @extend .grey-text;
  text-align: center;
  i {
    font-size: 180px;
  }
}

.btn-flat-link {
  color: $link-color;
}

label {
  color: $primary-color;
}

